# gpui-editor

./: Cargo.toml  Makefile  README.md  需求.md
examples/: demo.rs
scripts/: build.sh  demo.sh  doc.sh  fmt.sh  lint.sh  test.sh
src/: buffer.rs  cursor.rs  lib.rs  style.rs  textarea.rs
src/textarea/: editing.rs  element.rs  input_handler.rs  mod.rs
tests/: integration_test.rs
