[package]
name = "gpui-editor"
version = "0.1.0"
edition = "2021"
description = "A multi-line textarea component built with gpui"
license = "MIT"

[dependencies]
gpui = "0.2.2"
unicode-segmentation = "1.11"

[dev-dependencies]
log = "0.4"
simplelog = "0.12"

[[example]]
name = "demo"
path = "examples/demo.rs"
